Testing API Playground
Working for `cout_chauffage` on dummy response

--- a/models/clean_data.ipynb
+++ b/models/clean_data.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "merged_df.to_csv('data/merged74.csv', index=False)\n",
+    "merged_df.to_csv('data/logements_74.csv', index=False)\n",
     "merged_df.shape"
    ]
   }
