Summarised `graphique` into a notebook and added plots to the app

--- a/models/clean_data.ipynb
+++ b/models/clean_data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,21 +266,173 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Fix `classe_altitude`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categoriser_altitude(altitude):\n",
+    "    \"\"\"\n",
+    "    Affecte chaque logement à une tranche d'altitude\n",
+    "    \n",
+    "    Cette fonction permet de regrouper les logements selon leur altitude\n",
+    "    pour faciliter les analyses comparatives entre vallées et montagnes.\n",
+    "    \n",
+    "    Args:\n",
+    "        altitude (float): Altitude du logement en mètres\n",
+    "        \n",
+    "    Returns:\n",
+    "        str: Label de la tranche d'altitude correspondante\n",
+    "    \"\"\"\n",
+    "    # Gestion des valeurs manquantes\n",
+    "    if pd.isna(altitude):\n",
+    "        return pd.NA\n",
+    "    \n",
+    "    # Attribution de la tranche selon les seuils définis\n",
+    "    if altitude < 600:\n",
+    "        return \"0-600m (Vallée)\"\n",
+    "    elif altitude < 1200:\n",
+    "        return \"600-1200m (Colline)\"\n",
+    "    elif altitude < 1800:\n",
+    "        return \"1200-1800m (Montagne)\"\n",
+    "    elif altitude < 2500:\n",
+    "        return \"1800-2500m (Haute montagne)\"\n",
+    "    else:\n",
+    "        return \">2500m (Très haute montagne)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['classe_altitude'] = merged_df['altitude_moyenne'].apply(categoriser_altitude)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add `categorie_dpe`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categoriser_dpe(etiquette):\n",
+    "    if etiquette in ['A', 'B']:\n",
+    "        return 'Bons (A-B)'\n",
+    "    elif etiquette in ['C', 'D']:\n",
+    "        return 'Moyens (C-D)'\n",
+    "    elif etiquette == 'E':\n",
+    "        return 'Médiocres (E)'\n",
+    "    else:  # F ou G\n",
+    "        return 'Passoires (F-G)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['categorie_dpe'] = merged_df['etiquette_dpe'].apply(categoriser_dpe)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add `passoire`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['passoire'] = merged_df['etiquette_dpe'].isin(['F', 'G'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add `periode_categorie`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def categoriser_periode(periode):\n",
+    "    \"\"\"Regroupe les périodes de construction en grandes époques\"\"\"\n",
+    "    if pd.isna(periode):\n",
+    "        return pd.NA\n",
+    "    \n",
+    "    periode_str = str(periode).lower()\n",
+    "    \n",
+    "    # Strings\n",
+    "    if any(x in periode_str for x in ['récent']):\n",
+    "        return 'Après 2012'\n",
+    "    elif any(x in periode_str for x in ['avant', 'ancien']):\n",
+    "        return 'Avant 1975'\n",
+    "    \n",
+    "    periode_int = int(periode_str.split('-')[0].split(' ')[-1])\n",
+    "\n",
+    "    # Avant 1975 (première réglementation thermique)\n",
+    "    if periode_int < 1975:\n",
+    "        return 'Avant 1975' \n",
+    "    # 1975-2000 (RT 1974, 1988, 2000)\n",
+    "    elif periode_int <= 2000:\n",
+    "        return '1975-2000'\n",
+    "    # 2001-2012 (RT 2005, 2012)\n",
+    "    elif periode_int <= 2012:\n",
+    "        return '2001-2012'\n",
+    "    # Après 2012 (RT 2012, RE 2020)\n",
+    "    else:\n",
+    "        return 'Après 2012'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df['periode_categorie'] = merged_df['periode_construction'].apply(categoriser_periode)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Save CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(203797, 236)"
+       "(203797, 239)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
