quick fix to file save

--- a/notebooks/notebook_exploratoire.ipynb
+++ b/notebooks/notebook_exploratoire.ipynb
@@ -8217,7 +8217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "0fa07f9f",
    "metadata": {},
    "outputs": [
@@ -8249,18 +8249,41 @@
       "   7. protection_solaire_exterieure\n",
       "   8. zone_climatique\n",
       "   9. classe_altitude\n",
-      "  10. apport_interne_saison_chauffe\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "Pipeline(steps=[('preprocessor',\n                 ColumnTransformer(transformers=[('num',\n                                                  Pipeline(steps=[('imputer',\n                                                                   SimpleImputer(strategy='median')),\n                                                                  ('scaler',\n                                                                   StandardScaler())]),\n                                                  ['surface_habitable_logement',\n                                                   'logement_traversant',\n                                                   'protection_solaire_exterieure',\n                                                   'apport_interne_saison_chauffe']),\n                                                 ('cat',\n                                                  Pipeline(steps=[('imputer',\n                                                                   SimpleImputer(fill_value='missing',\n                                                                                 strategy='constant')),\n                                                                  ('onehot',\n                                                                   OneHotEncoder(handle_unknown='ignore',\n                                                                                 sparse_output=False))]),\n                                                  ['periode_construction',\n                                                   'type_batiment',\n                                                   'qualite_isolation_enveloppe',\n                                                   'type_energie_principale_chauffage',\n                                                   'zone_climatique',\n                                                   'classe_altitude'])])),\n                ('model',\n                 GradientBoostingRegressor(max_depth=5, min_samples_split=5,\n                                           n_estimators=50, random_state=42))])",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[93], line 34\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, feat \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(available_user_features, \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     22\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m2d\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfeat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m     25\u001b[0m \n\u001b[0;32m     26\u001b[0m \u001b[38;5;124m🎯 MODÈLES DÉVELOPPÉS\u001b[39m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;124m──────────────────────────────────────────────────────────────────────────────\u001b[39m\n\u001b[0;32m     28\u001b[0m \n\u001b[0;32m     29\u001b[0m \u001b[38;5;124m1️⃣  RÉGRESSION : Prédiction de la consommation énergétique\u001b[39m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;124m    Target           : conso_5_usages_ep (kWh/m²/an)\u001b[39m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;124m    Meilleur modèle  : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_reg_model\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     32\u001b[0m \u001b[38;5;124m    Performance      : R² = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_reg_r2\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (variance expliquée : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_reg_r2\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%)\u001b[39m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;124m                       RMSE = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_reg_rmse\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m,.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m kWh/m²/an\u001b[39m\n\u001b[1;32m---> 34\u001b[0m \u001b[38;5;124m                       MAE = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mresults_user\u001b[49m\u001b[43m[\u001b[49m\u001b[43mbest_reg_model\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmae_test\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m,.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m kWh/m²/an\u001b[39m\n\u001b[0;32m     35\u001b[0m \u001b[38;5;124m    \u001b[39m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;124m    ✓ Rétention vs modèle complet (36f) : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m(best_reg_r2\u001b[38;5;250m \u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;250m \u001b[39mresults_regression[best_reg_model][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr2\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m%\u001b[39m\n\u001b[0;32m     37\u001b[0m \n\u001b[0;32m     38\u001b[0m \u001b[38;5;124m2️⃣  CLASSIFICATION : Détection des passoires énergétiques (DPE F/G)\u001b[39m\n\u001b[0;32m     39\u001b[0m \u001b[38;5;124m    Target           : passoire (0=Non, 1=Oui)\u001b[39m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;124m    Meilleur modèle  : \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_clf_model\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[38;5;124m    Performance      : ROC-AUC = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_clf_auc\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;124m                       F1-Score = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_clf_f1\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;124m                       Accuracy = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresults_classification_user[best_clf_model][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;124m                       Precision = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresults_classification_user[best_clf_model][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprecision\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[38;5;124m                       Recall = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mresults_classification_user[best_clf_model][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrecall\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[0;32m     46\u001b[0m \n\u001b[0;32m     47\u001b[0m \u001b[38;5;124m💾 SAUVEGARDE\u001b[39m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;124m──────────────────────────────────────────────────────────────────────────────\u001b[39m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;124m  • Dossier         : models/models_pkl/\u001b[39m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;124m  • Modèle régression    : ✅ Sauvegardé\u001b[39m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;124m  • Modèle classification : ✅ Sauvegardé\u001b[39m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;124m  • Métadonnées     : ✅ Sauvegardées\u001b[39m\n\u001b[0;32m     53\u001b[0m \n\u001b[0;32m     54\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: Pipeline(steps=[('preprocessor',\n                 ColumnTransformer(transformers=[('num',\n                                                  Pipeline(steps=[('imputer',\n                                                                   SimpleImputer(strategy='median')),\n                                                                  ('scaler',\n                                                                   StandardScaler())]),\n                                                  ['surface_habitable_logement',\n                                                   'logement_traversant',\n                                                   'protection_solaire_exterieure',\n                                                   'apport_interne_saison_chauffe']),\n                                                 ('cat',\n                                                  Pipeline(steps=[('imputer',\n                                                                   SimpleImputer(fill_value='missing',\n                                                                                 strategy='constant')),\n                                                                  ('onehot',\n                                                                   OneHotEncoder(handle_unknown='ignore',\n                                                                                 sparse_output=False))]),\n                                                  ['periode_construction',\n                                                   'type_batiment',\n                                                   'qualite_isolation_enveloppe',\n                                                   'type_energie_principale_chauffage',\n                                                   'zone_climatique',\n                                                   'classe_altitude'])])),\n                ('model',\n                 GradientBoostingRegressor(max_depth=5, min_samples_split=5,\n                                           n_estimators=50, random_state=42))])"
+      "  10. apport_interne_saison_chauffe\n",
+      "\n",
+      "\n",
+      "🎯 MODÈLES DÉVELOPPÉS\n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "\n",
+      "1️⃣  RÉGRESSION : Prédiction de la consommation énergétique\n",
+      "    Target           : conso_5_usages_ep (kWh/m²/an)\n",
+      "    Meilleur modèle  : GradientBoosting\n",
+      "    Performance      : R² = 0.9127 (variance expliquée : 91.3%)\n",
+      "                       RMSE = 16,359.65 kWh/m²/an\n",
+      "                       MAE = 5,075.47 kWh/m²/an\n",
+      "    \n",
+      "    ✓ Rétention vs modèle complet (36f) : 99.4%\n",
+      "\n",
+      "2️⃣  CLASSIFICATION : Détection des passoires énergétiques (DPE F/G)\n",
+      "    Target           : passoire (0=Non, 1=Oui)\n",
+      "    Meilleur modèle  : RandomForest\n",
+      "    Performance      : ROC-AUC = 0.9391\n",
+      "                       F1-Score = 0.6436\n",
+      "                       Accuracy = 0.8562\n",
+      "                       Precision = 0.5066\n",
+      "                       Recall = 0.8820\n",
+      "\n",
+      "💾 SAUVEGARDE\n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "  • Dossier         : models_pkl\n",
+      "  • Modèle régression    : ✅ Sauvegardé\n",
+      "  • Modèle classification : ✅ Sauvegardé\n",
+      "  • Métadonnées     : ✅ Sauvegardées\n",
+      "\n",
+      "\n",
+      "================================================================================\n",
+      "✅ PROJET TERMINÉ\n",
+      "================================================================================\n"
      ]
     }
    ],
